--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
         <img src="Untitled-22.jpg" width="100%" height="90px">   
       
        <ul>
-        <li><a  href="lesson 1.html"><img src="home.png" width="20px" height="20px"></a></li>
+        <li><a  href="index.html"><img src="home.png" width="20px" height="20px"></a></li>
         <li><a href="#">DG app store</a></li>
         <li><a href="https://www.instagram.com/dahamgamage2_0_0_9/">Instagram</a></li>
         <li><a href="https://www.youtube.com/channel/UCehb1yJo4XcXPKOR1soOXRg">Youtube Channel</a></li>
