--- a/arduino bluetooth car.html
+++ b/arduino bluetooth car.html
@@ -124,7 +124,7 @@
         <img src="Untitled-22.jpg" width="100%" height="90px">   
       
        <ul>
-        <li><a  href=" https://daham2009.github.io/dgtechbank/"><img src="home.png" width="20px" height="20px"></a></li>
+        <li><a  href="index.html"><img src="home.png" width="20px" height="20px"></a></li>
         <li><a href="#">DG app store</a></li>
         <li><a href="https://www.instagram.com/dahamgamage2_0_0_9/">Instagram</a></li>
         <li><a href="https://www.youtube.com/channel/UCehb1yJo4XcXPKOR1soOXRg">Youtube Channel</a></li>
