--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                 padding: 20px;
                 color: white;
                 text-decoration: solid;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family: 'catamaran';
             }
             .active{
                 background-color: blue;
@@ -50,7 +50,7 @@
            
             
             h3{
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-family: 'catamaran';
                 padding-left: 20px;
             }
             img a{
@@ -89,7 +89,7 @@
                 padding: 50px;
             }
             p{
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family: 'catamaran';
                 color: rgb(216, 216, 17);
             }
             h3{
@@ -125,7 +125,7 @@
         <li><a href="https://www.instagram.com/dahamgamage2_0_0_9/">Instagram</a></li>
         <li><a href="https://www.youtube.com/channel/UCehb1yJo4XcXPKOR1soOXRg">Youtube Channel</a></li>
         <li><a class="active" href="projects.html">Projects</a></li>
-        <li> <lable for="Search" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;padding: 10px;color: white;" >Search</lable>
+        <li> <lable for="Search" style="font-family: 'catamaran';padding: 10px;color: white;" >Search</lable>
             <input type="text" id="Search">
             <br></li>
        </ul><br>
